--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
     "babel-plugin-transform-es2015-sticky-regex": "^6.5.0",
     "babel-plugin-transform-es2015-unicode-regex": "^6.5.0",
     "babel-register": "^6.7.2"
-  }
+  },
+  "engine": "node >= 5.8.0"
 }
